# serde-wit

./: Cargo.toml  LICENSE-MIT  README.md  rust-toolchain
src/: any.rs  intern.rs  lib.rs
src/de/: client.wit
src/de/guest/: client.rs  provider.rs
src/de/host/: client.rs  provider.rs
src/de/wasm_guest/: client.rs  mod.rs  provider.rs
src/de/wasmtime_host/: client.rs  provider.rs
src/ser/: client.wit  mod.rs
src/ser/guest/: client.rs  provider.rs
src/ser/host/: client.rs  provider.rs
src/ser/wasm_guest/: client.rs  mod.rs  provider.rs
src/ser/wasmtime_host/: client.rs  provider.rs
src/ser/wasmtime_host/provider/: bindings.rs
tests/: main.rs
tests/crates/resource/: Cargo.toml
tests/crates/resource/src/: lib.rs
tests/crates/wasi_snapshot_preview1/: Cargo.toml
tests/crates/wasi_snapshot_preview1/src/: lib.rs
tests/crates/wasm-tests/: Cargo.toml
tests/crates/wasm-tests/artifacts/: Cargo.toml  build.rs
tests/demo/: demo.wit  mod.rs  wasm.rs
tests/ser/: demo.rs  main.rs  mod.rs  ser.wit  wasm-dummy.rs  wasm-serialize-test.rs  wasm-serialize.rs  wasm-serializer-test.rs  wasm-serializer.rs  wasm.rs
tests/ser/demo/: demo.wit  wasm.rs
tests/ser/wit/: deps.toml  ser.wit
wit/: demo.wit  deserialize.wit  serde-de.wit  serde-deserializer-client.wit  serde-deserializer-provider.wit  serde-ser.wit  serde-serializer-client.wit  serde-serializer-provider.wit  serde-types.wit  serialize.wit
