[package]
name = "serde-wit"
version = "0.1.0"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
license = { workspace = true }
edition = { workspace = true }

description = "Serialization and deserialization across a WASM boundary"
documentation = "https://docs.rs/serde-wit/"
readme = "README.md"
repository = "https://github.com/juntyr/serde-wit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "tests/crates/wasm-tests",
    "tests/crates/wasi_snapshot_preview1",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = { version = "1.0" }
wit-bindgen = { version = "0.9", git = "https://github.com/bytecodealliance/wit-bindgen", rev = "03154cb", default-features = false }
wasmtime = { version = "13.0", git = "https://github.com/bytecodealliance/wasmtime", rev = "137c6f6", default-features = false }
wasmtime-component-macro = { version = "13.0", git = "https://github.com/bytecodealliance/wasmtime", rev = "137c6f6", default-features = false }

[lib]

[features]
default = []
wasm-guest = ["wit-bindgen"]
wasmtime-host = ["anyhow", "wasmtime", "wasmtime-component-macro"]

[dependencies]
anyhow = { workspace = true, optional = true }
hash32 = { version = "0.3" }
scoped_reference = { version = ">=0.1.3", default-features = false }
serde = { version = "1.0", features = ["alloc"], default-features = false }
simple-interner = { version = "0.3", features = ["hashbrown"] }
wit-bindgen = { workspace = true, features = ["macros", "realloc"], optional = true }
wasmtime = { workspace = true, default-features = false, features = ["component-model"], optional = true }
wasmtime-component-macro = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
wasmtime = { workspace = true, default-features = false, features = ["component-model", "cache", "cranelift"] }
wasmtime-component-macro = { workspace = true }
test-artifacts = { path = "tests/crates/wasm-tests/artifacts" }
wit-component = { version = "0.13" }
wasm-compose = { version = "0.4" }
temp-file = { version = "0.1" }
