[package]
name = "serde-wit"
version = "0.1.0"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
license = "MIT OR Apache-2.0"
edition = "2021"

description = "Serialization and deserialization across a WASM boundary"
documentation = "https://docs.rs/serde-wit/"
readme = "README.md"
repository = "https://github.com/juntyr/serde-wit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
wasm-guest = ["wit-bindgen"]
wasmtime-host = ["anyhow", "wasmtime", "wasmtime-component-macro"]

[dependencies]
anyhow = { version = "1.0", optional = true }
hash32 = { version = "0.3" }
scoped_reference = { version = ">=0.1.3", default-features = false }
serde = { version = "1.0", features = ["alloc"], default-features = false }
simple-interner = { version = "0.3", features = ["hashbrown"] }
wit-bindgen = { version = "0.11.0", optional = true }
wasmtime = { version = "13.0.0", git = "https://github.com/bytecodealliance/wasmtime", rev = "a04c493", default-features = false, features = ["component-model"], optional = true }
wasmtime-component-macro = { version = "13.0.0", git = "https://github.com/bytecodealliance/wasmtime", rev = "a04c493", optional = true }
