[package]
name = "serde-wit"
version = "0.1.0"
authors = ["Juniper Tyree <juniper.tyree@helsinki.fi>"]
license = "MIT OR Apache-2.0"
edition = "2021"

description = "Serialization and deserialization across a WASM boundary"
documentation = "https://docs.rs/serde-wit/"
readme = "README.md"
repository = "https://github.com/juntyr/serde-wit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
wasm-guest = ["wit-bindgen"]
wasmtime-host = ["anyhow", "wasmtime", "send_wrapper"]

[dependencies]
anyhow = { version = "1.0", optional = true }
hash32 = { version = "0.3" }
scoped_reference = { version = ">=0.1.3", default-features = false }
send_wrapper = { version = "0.6", default-features = false, optional = true }
serde = { version = "1.0", features = ["alloc"], default-features = false }
simple-interner = { version = "0.3", features = ["hashbrown"] }
wit-bindgen = { version = "0.28", optional = true }
wasmtime = { version = "22.0", default-features = false, features = ["std", "runtime", "component-model"], optional = true }
