[package]
name = "wasm-tests"
version = "0.0.0"
license = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
wit-bindgen = { workspace = true, features = ["macros", "realloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
# serde-wit = { version = "0.1", path = "../../..", features = ["wasm-guest"] }

[lib]
test = false
doctest = false

[[bin]]
name = "demo"
path = "../../demo/wasm.rs"
test = false

[[bin]]
name = "ser"
path = "../../ser/wasm.rs"
test = false
